--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -10,7 +10,7 @@
         android:id="@+id/emptyTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="your cart is Empty"
+        android:text="Your cart is empty"
         android:textColor="@color/blue_grey"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
