--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
             </LinearLayout>
 
             <EditText
-                android:id="@+id/userEdt"
+                android:id="@+id/emailEdt"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="32dp"
