--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,19 +27,9 @@
                     android:id="@+id/textView9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Welcome"
+                    android:text="Welcome back!"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="User1"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="@+id/textView9"
-                    app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
                 <ImageView
                     android:id="@+id/logoutBtn"
@@ -59,6 +49,18 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/userBtn"
+                    android:layout_width="52dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="6dp"
+                    android:background="@drawable/grey_background"
+                    android:onClick="onUserBtnClicked"
+                    android:padding="12dp"
+                    android:contentDescription="User profile"
+                    app:srcCompat="@drawable/user" />
+
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -130,6 +132,13 @@
                     android:textColor="@color/blue_grey"
                     android:textSize="22dp"
                     android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/txtviewall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="VIEW ALL"
+                    android:textColor="@color/red" />
 
             </LinearLayout>
 
