--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -8,7 +8,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="-107dp"
+        tools:layout_editor_absoluteY="-38dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,19 +28,19 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
                 android:layout_marginTop="16dp"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Food"
                     android:layout_marginEnd="8dp"
+                    android:text="Food"
+                    android:textColor="@color/blue_grey"
                     android:textSize="45sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/blue_grey"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/textView4"
@@ -46,39 +48,38 @@
                     android:layout_height="wrap_content"
                     android:text="App"
                     android:textColor="@color/blue_grey"
-                    android:textSize="45sp"/>
+                    android:textSize="45sp" />
             </LinearLayout>
 
             <EditText
-                android:id="@+id/userEdt"
+                android:id="@+id/emailEdt"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
-                android:layout_marginStart="32dp"
+                android:background="@drawable/edittext_background"
+                android:ems="10"
                 android:hint="Email address"
+                android:inputType="text"
                 android:textAlignment="center"
                 android:textColorHint="@color/blue_grey"
-                android:textSize="16sp"
-                android:ems="10"
-                android:background="@drawable/edittext_background"
-                android:inputType="text"
-                />
+                android:textSize="16sp" />
+
             <EditText
                 android:id="@+id/passEdt"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
-                android:layout_marginStart="32dp"
+                android:background="@drawable/edittext_background"
+                android:ems="10"
                 android:hint="Password"
+                android:inputType="textPassword"
                 android:textAlignment="center"
                 android:textColorHint="@color/blue_grey"
-                android:textSize="16sp"
-                android:ems="10"
-                android:background="@drawable/edittext_background"
-                android:inputType="textPassword"
-                />
+                android:textSize="16sp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/signupBtn"
